feat （update） v-1.0.1 添加新功能

--- a/BCX_Wallet/module_found/src/main/res/layout/module_found_list_item.xml
+++ b/BCX_Wallet/module_found/src/main/res/layout/module_found_list_item.xml
@@ -27,7 +27,7 @@
             android:layout_width="@dimen/dp_64"
             android:layout_height="@dimen/dp_64"
             android:layout_gravity="center"
-            android:src="@{viewModel.listIcon}" />
+            binding:url="@{viewModel.entity.imageUrl}" />
 
         <RelativeLayout
             android:layout_width="match_parent"
