--- a/BCX_Wallet/module_found/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_found/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="color_ff343434">#ff343434</color>
     <color name="color_333333">#333333</color>
     <color name="color_666666">#666666</color>
+    <color name="color_F9F9F9">#F9F9F9</color>
 </resources>
