--- a/BCX_Wallet/module_found/src/main/res/layout/found_nav_item.xml
+++ b/BCX_Wallet/module_found/src/main/res/layout/found_nav_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:binding="http://schemas.android.com/apk/res-auto"
+<layout xmlns:binding="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="ResourceName">
 
     <data>
@@ -26,9 +26,10 @@
         binding:onClickCommand="@{viewModel.onItemClick}">
 
         <ImageView
+            android:id="@+id/iv_nav"
             android:layout_width="@dimen/dp_44"
             android:layout_height="@dimen/dp_44"
-            android:src="@{viewModel.navIcon}" />
+            binding:url="@{viewModel.entity.navIconUrl}"/>
 
         <TextView
             android:layout_width="wrap_content"
