--- a/BCX_Wallet/module_found/src/main/res/layout/fragment_found.xml
+++ b/BCX_Wallet/module_found/src/main/res/layout/fragment_found.xml
@@ -24,15 +24,34 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <RelativeLayout
             android:id="@+id/found_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="@string/fragment_found_title"
-            android:textColor="@color/color_262A33"
-            android:textSize="@dimen/sp_18"
-            android:typeface="@{@string/TOTAL_ASSET}" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/fragment_found_title"
+                android:textColor="@color/color_262A33"
+                android:textSize="@dimen/sp_18"
+                android:typeface="@{@string/TOTAL_ASSET}" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="@dimen/dp_16"
+                binding:onClickCommand="@{viewModel.searchOnClickCommand}">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/search" />
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -66,11 +85,11 @@
                     binding:layoutManager="@{LayoutManagers.grid(4)}" />
 
                 <TextView
+                    android:id="@+id/tv_hot_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_40"
                     android:paddingLeft="@dimen/dp_18"
-                    android:text="@string/super_hot"
                     android:textColor="@color/color_333333"
                     android:textSize="@dimen/sp_22"
                     android:typeface="@{@string/TOTAL_ASSET}" />
