--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_join_community.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_join_community.xml
@@ -42,7 +42,7 @@
                 android:text="@string/fragment_mine_about_us_join_community_title"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_18"
-                android:typeface="@{@string/TOTAL_ASSET}"/>
+                android:typeface="@{@string/TOTAL_ASSET}" />
 
         </RelativeLayout>
 
@@ -151,7 +151,7 @@
             android:background="@color/color_ffe6e6e6" />
 
 
-       <!-- <LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:gravity="center_vertical"
@@ -164,7 +164,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="@string/fragment_mine_develop_account"
+                android:text="@string/fragment_mine_discord"
                 android:textColor="@color/color_A5A9B1"
                 android:textSize="@dimen/dp_15" />
 
@@ -172,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:text="@={viewModel.developAccount}"
+                android:text="@={viewModel.discord}"
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/dp_15" />
 
@@ -189,14 +189,61 @@
                 android:text="@string/copy"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_12"
-                binding:onClickCommand="@{viewModel.copyDevelopAccountOnClickCommand}" />
+                binding:onClickCommand="@{viewModel.copyDiscordOnClickCommand}" />
 
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_ffe6e6e6" />-->
+            android:background="@color/color_ffe6e6e6" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingRight="@dimen/dp_15">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/fragment_mine_telegram"
+                android:textColor="@color/color_A5A9B1"
+                android:textSize="@dimen/dp_15" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@={viewModel.telegram}"
+                android:textColor="@color/color_262A33"
+                android:textSize="@dimen/dp_15" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_16"
+                android:background="@drawable/shape_create_wallet_bg"
+                android:gravity="center"
+                android:paddingLeft="@dimen/dp_7"
+                android:paddingTop="@dimen/dp_2"
+                android:paddingRight="@dimen/dp_7"
+                android:paddingBottom="@dimen/dp_2"
+                android:text="@string/copy"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_12"
+                binding:onClickCommand="@{viewModel.copyTelegramOnClickCommand}" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_ffe6e6e6" />
 
 
         <LinearLayout
