--- a/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_coin_select.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_coin_select.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_74"
         android:layout_marginTop="@dimen/dp_12"
-        android:background="@drawable/fragment_assets_item_bg"
+        android:background="@drawable/item_bg_round"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/dp_12"
