feat (PropAssetFragment) 添加道具资产列表布局

--- a/BCX_Wallet/module_mine/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color_E0E0E0">#E0E0E0</color>
     <color name="color_ffececec">#ffececec</color>
     <color name="color_D8DBE1">#D8DBE1</color>
+    <color name="color_5A5D66">#5A5D66</color>
 </resources>
