--- a/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_all_nh_order.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/module_asset_item_all_nh_order.xml
@@ -30,50 +30,37 @@
             android:paddingBottom="@dimen/dp_7">
 
             <LinearLayout
+                android:id="@+id/ll_seller"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:ignore="RtlHardcoded">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/module_asset_nh_order_id"
+                    android:text="@string/module_asset_nh_asset_order_seller"
                     android:textColor="@color/color_262A33"
-                    android:textSize="@dimen/sp_14"
-                    android:typeface="@{@string/TOTAL_ASSET}" />
+                    android:textSize="@dimen/sp_14" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@={viewModel.allNhOrderId}"
+                    android:maxWidth="@dimen/dp_90"
+                    android:singleLine="true"
+                    android:text="@={viewModel.allNhOrderSeller}"
                     android:textColor="@color/color_262A33"
-                    android:textSize="@dimen/sp_14"
-                    android:typeface="@{@string/TOTAL_ASSET}" />
+                    android:textSize="@dimen/sp_14" />
+
             </LinearLayout>
 
-            <LinearLayout
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                tools:ignore="RtlHardcoded">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/module_asset_nh_order_price"
-                    android:textColor="@color/color_262A33"
-                    android:textSize="@dimen/sp_14"
-                    android:typeface="@{@string/TOTAL_ASSET}" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@={viewModel.allNhOrderPrice}"
-                    android:textColor="@color/color_262A33"
-                    android:textSize="@dimen/sp_14"
-                    android:typeface="@{@string/TOTAL_ASSET}" />
-            </LinearLayout>
-
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@={viewModel.allNhOrderExpritationTime}"
+                android:textColor="@color/color_F56151"
+                android:textSize="@dimen/sp_10"
+                tools:ignore="SpUsage" />
         </RelativeLayout>
 
         <View
@@ -99,27 +86,13 @@
                 android:gravity="center_vertical"
                 tools:ignore="RtlHardcoded">
 
-                <LinearLayout
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/dp_6">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/module_asset_nh_asset_order_id"
-                        android:textColor="@color/color_262A33"
-                        android:textSize="@dimen/sp_14"
-                        tools:ignore="SpUsage" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@={viewModel.nhAssetId}"
-                        android:textColor="@color/color_262A33"
-                        android:textSize="@dimen/sp_14" />
-                </LinearLayout>
-
+                    android:text="@={viewModel.allNhOrderId}"
+                    android:textColor="@color/color_262A33"
+                    android:textSize="@dimen/sp_16"
+                    android:typeface="@{@string/TOTAL_ASSET}" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -131,7 +104,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/module_asset_nh_asset_order_memo"
-                        android:textColor="@color/color_626670"
+                        android:textColor="@color/color_262A33"
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
@@ -139,69 +112,50 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:text="@={viewModel.allNhOrderMemo}"
-                        android:textColor="@color/color_626670"
+                        android:textColor="@color/color_262A33"
                         android:textSize="@dimen/sp_14" />
 
                 </LinearLayout>
 
-                <RelativeLayout
+
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true">
-
-                    <LinearLayout
-                        android:id="@+id/ll_seller"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/module_asset_nh_asset_order_seller"
-                            android:textColor="@color/color_A5A9B1"
-                            android:textSize="@dimen/sp_13" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:maxWidth="@dimen/dp_100"
-                            android:singleLine="true"
-                            android:text="@={viewModel.allNhOrderSeller}"
-                            android:textColor="@color/color_A5A9B1"
-                            android:textSize="@dimen/sp_13" />
-
-                    </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    tools:ignore="RtlHardcoded">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:text="@={viewModel.allNhOrderExpritationTime}"
-                        android:textColor="@color/color_F56151"
-                        android:textSize="@dimen/sp_10"
-                        tools:ignore="SpUsage" />
+                        android:text="@string/module_asset_nh_order_price"
+                        android:textColor="@color/color_262A33"
+                        android:textSize="@dimen/sp_14" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentBottom="true"
-                        android:background="@drawable/btn_bigger_round_bg"
-                        android:gravity="center"
-                        android:paddingLeft="@dimen/dp_12"
-                        android:paddingTop="@dimen/dp_2"
-                        android:paddingRight="@dimen/dp_12"
-                        android:paddingBottom="@dimen/dp_2"
-                        android:text="@string/buy_nh_order_text"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/sp_13"
-                        binding:onClickCommand="@{viewModel.buyNhOrderCommand}"
-                        tools:ignore="SpUsage" />
-                </RelativeLayout>
+                        android:text="@={viewModel.allNhOrderPrice}"
+                        android:textColor="@color/color_262A33"
+                        android:textSize="@dimen/sp_14" />
+                </LinearLayout>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/btn_bigger_round_bg"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/dp_12"
+                    android:paddingTop="@dimen/dp_2"
+                    android:paddingRight="@dimen/dp_12"
+                    android:paddingBottom="@dimen/dp_2"
+                    android:text="@string/buy_nh_order_text"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_13"
+                    binding:onClickCommand="@{viewModel.buyNhOrderCommand}"
+                    tools:ignore="SpUsage" />
 
             </RelativeLayout>
         </LinearLayout>
