--- a/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_prop_assets.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_prop_assets.xml
@@ -31,90 +31,69 @@
             android:layout_height="@dimen/dp_62"
             binding:url="@{viewModel.nhAssetIconUrl}" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/dp_14"
-            android:orientation="vertical">
+            android:paddingTop="@dimen/dp_3">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/asset_id"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/mine_nh_asset_id_text"
-                    android:textColor="@color/color_262A33"
-                    android:textSize="@dimen/sp_16"
-                    android:typeface="@{@string/TOTAL_ASSET}" />
-
-                <TextView
-                    android:id="@+id/asset_id"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewModel.nhAssetId}"
-                    android:textColor="@color/color_262A33"
-                    android:textSize="@dimen/sp_16"
-                    android:typeface="@{@string/TOTAL_ASSET}" />
-
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.nhAssetId}"
+                android:textColor="@color/color_262A33"
+                android:textSize="@dimen/sp_16"
+                android:typeface="@{@string/TOTAL_ASSET}" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_5">
+                android:layout_alignParentEnd="true">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/mine_nh_asset_qualifier"
-                    android:textColor="@color/color_5A5D66"
-                    android:textSize="@dimen/sp_13" />
+                    android:textColor="@color/color_262A33"
+                    android:textSize="@dimen/sp_14" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{viewModel.assetQualifier}"
-                    android:textColor="@color/color_5A5D66"
-                    android:textSize="@dimen/sp_13" />
+                    android:textColor="@color/color_262A33"
+                    android:textSize="@dimen/sp_14" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true">
+                android:layout_alignParentBottom="true"
+                android:paddingBottom="@dimen/dp_3">
 
                 <TextView
                     android:id="@+id/token_balance_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/mine_nh_asset_world_view"
-                    android:textColor="@color/color_5A5D66"
-                    android:textSize="@dimen/sp_13" />
+                    android:textColor="@color/color_262A33"
+                    android:textSize="@dimen/sp_14" />
 
                 <TextView
                     android:id="@+id/token_total_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@{viewModel.assetWorldView}"
-                    android:textColor="@color/color_5A5D66"
-                    android:textSize="@dimen/sp_13" />
+                    android:textColor="@color/color_262A33"
+                    android:textSize="@dimen/sp_14" />
             </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
+                android:layout_alignParentBottom="true"
                 android:background="@drawable/btn_bigger_round_bg"
                 android:gravity="center"
                 android:paddingLeft="@dimen/dp_12"
@@ -127,6 +106,7 @@
                 android:textSize="@dimen/sp_13"
                 binding:onClickCommand="@{viewModel.deleteNhAssetCommand}"
                 tools:ignore="SpUsage" />
-        </LinearLayout>
+        </RelativeLayout>
+
     </LinearLayout>
 </layout>
