feat （NHAssetDetailActivity）1.Add NH asset details page layout;  2.Bind NH asset details page data;

--- a/BCX_Wallet/module_mine/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="color_ffececec">#ffececec</color>
     <color name="color_D8DBE1">#D8DBE1</color>
     <color name="color_5A5D66">#5A5D66</color>
+    <color name="color_ffe8ebf1">#ffe8ebf1</color>
 </resources>
