--- a/BCX_Wallet/module_mine/src/main/res/values/dimens.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="dp_88">88dp</dimen>
     <dimen name="dp_125">125dp</dimen>
     <dimen name="dp_62">62dp</dimen>
+    <dimen name="dp_34">34dp</dimen>
+    <dimen name="dp_140">140dp</dimen>
+    <dimen name="dp_48">48dp</dimen>
 </resources>
