fix (PropAssetFragment)  Modify the name of prop assets to  NH asset;

--- a/BCX_Wallet/module_mine/src/main/res/layout/fragment_prop_asset.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/fragment_prop_asset.xml
@@ -12,11 +12,11 @@
 
         <import type="com.cocos.library_base.binding.viewadapter.recyclerview.LineManagers" />
 
-        <import type="com.cocos.module_mine.asset_overview.PropAssetViewModel" />
+        <import type="com.cocos.module_mine.asset_overview.NHAssetViewModel" />
 
         <variable
             name="viewModel"
-            type="PropAssetViewModel" />
+            type="com.cocos.module_mine.asset_overview.NHAssetViewModel" />
     </data>
 
     <LinearLayout
