--- a/BCX_Wallet/module_asset/src/main/res/layout/activity_nh_order_detail.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/activity_nh_order_detail.xml
@@ -43,7 +43,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -350,6 +351,21 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/dp_30"
                     android:src="@{viewModel.drawableImg}" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:layout_marginRight="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_22"
+                    android:background="@drawable/shape_create_wallet_bg"
+                    android:gravity="center"
+                    android:text="@={viewModel.operateOrderText}"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_16"
+                    binding:onClickCommand="@{viewModel.operateOnClickCommand}" />
             </RelativeLayout>
 
         </ScrollView>
