--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_nh_asset_detaiil.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_nh_asset_detaiil.xml
@@ -43,7 +43,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -342,6 +343,38 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/dp_30"
                     android:src="@{viewModel.drawableImg}" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_alignParentBottom="true"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/color_F5B251"
+                        android:gravity="center"
+                        android:text="@string/module_mine_nh_asset_detail_transfer_text"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_16"
+                        binding:onClickCommand="@{viewModel.transferNhAssetCommand}" />
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/color_F56151"
+                        android:gravity="center"
+                        android:text="@string/delete_text"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_16"
+                        binding:onClickCommand="@{viewModel.deleteNhAssetCommand}" />
+                </LinearLayout>
             </RelativeLayout>
 
         </ScrollView>
