--- a/BCX_Wallet/module_mine/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="color_D8DBE1">#D8DBE1</color>
     <color name="color_5A5D66">#5A5D66</color>
     <color name="color_ffe8ebf1">#ffe8ebf1</color>
+    <color name="color_F5B251">#F5B251</color>
 </resources>
