--- a/BCX_Wallet/module_mine/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="color_5A5D66">#5A5D66</color>
     <color name="color_ffe8ebf1">#ffe8ebf1</color>
     <color name="color_F5B251">#F5B251</color>
+    <color name="color_E8EBF1">#E8EBF1</color>
 </resources>
