feat (SaleNHAssetActvitity) Adding sale nh aseet page about symbol selection layout and selection logic,

--- a/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_prop_assets.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/module_mine_item_prop_assets.xml
@@ -34,8 +34,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/dp_14"
-            android:paddingTop="@dimen/dp_3">
+            android:layout_marginStart="@dimen/dp_14">
 
             <TextView
                 android:id="@+id/asset_id"
@@ -69,8 +68,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:paddingBottom="@dimen/dp_3">
+                android:layout_alignParentBottom="true">
 
                 <TextView
                     android:id="@+id/token_balance_tv"
